[package]
name = "hc-homie5-smarthome"
version = "0.4.1"
edition = "2024"
publish = true
description = "Homie Homecontrol base library offering sane defaults for smarthome device nodes like switches, sensors,..."
repository = "https://github.com/homie-homecontrol/hc-homie5-smarthome"
license = "MIT"
authors = ["schaze <schazet@gmail.com>"]
readme = "README.md"
keywords = ["homie", "iot", "mqtt", "homecontrol"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
enum_dispatch = "0.3.12"
rumqttc = "0.25.0"
tokio = { version = "1.0", features = ["test-util"] }
futures = "0.3.28"
bytes = "1.5.0"


[dependencies]
chrono = "0.4.31"
homie5 = "0.8.0"
serde = "1.0"
